hphp/hack/test/typecheck/constraints/tparam_constrained_class_method_bad.php
<?hh // strict

class C {}

function test<T as C>(classname<T> $c): void {
  $c::doesNotExist();
}
